<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_groups">

    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.sharedwallet.ui.groups.GroupFragment"
        android:label="@string/menu_groups"
        tools:layout="@layout/fragment_group" />

    <fragment
        android:id="@+id/nav_activity"
        android:name="com.example.sharedwallet.ui.activity.ActivityFragment"
        android:label="@string/menu_activity"
        tools:layout="@layout/fragment_activity" />

    <fragment
        android:id="@+id/nav_friends"
        android:name="com.example.sharedwallet.ui.friends.FriendsFragment"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_friends" />
</navigation>