<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/expense_row_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_add_card_24"
            android:contentDescription="@string/expense_icon"
            android:layout_marginEnd="8dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/paidBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_a"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/paidFor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_b"
                android:textSize="14sp"
                android:textColor="@color/gray"/>
        </LinearLayout>

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_debt_amount"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_secondary_variant"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <!-- Grund für die Ausgabe -->
    <TextView
        android:id="@+id/reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reason"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginTop="4dp"/>
</LinearLayout>