<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.groupdetail.GroupDetailActivity">

    <!-- Toolbar als AppBar am oberen Rand -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white">

    <ImageView
        android:id="@+id/imageView_leaveGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingEnd="10dp"
        android:contentDescription="@string/string_logout"
        app:srcCompat="@drawable/ic_logout_white" />

        <ImageView
            android:id="@+id/imageView_refresh"
            android:scaleType="center"
            android:scaleX="1.6"
            android:scaleY="1.6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:adjustViewBounds="true"
            android:paddingEnd="20dp"
            android:contentDescription="@string/string_refresh"
            app:srcCompat="@drawable/ic_refresh" />

    </androidx.appcompat.widget.Toolbar>

    <!-- Oberer Bereich für Gesamtschulden -->
    <LinearLayout
        android:id="@+id/totalDebtContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/totalDebtLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_debt"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalDebtAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_debt_amount"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewExpensesPerUser"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewExpenses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalDebtContainer"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>


    <com.leinardi.android.speeddial.SpeedDialView
        android:id="@+id/fabGroupDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:sdMainFabClosedBackgroundColor="?attr/colorPrimary"
        app:sdMainFabClosedSrc="@android:drawable/ic_input_add">
    </com.leinardi.android.speeddial.SpeedDialView>

    <LinearLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
